applications/todo_frontend/argocd_repo_server_timeout_fix.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server
    spec:
      serviceAccountName: argocd-repo-server
      containers:
        - name: repo-server
          image: quay.io/argoproj/argocd:v3.2.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: server
          readinessProbe:
            httpGet:
              path: /healthz
              port: server
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: server
            initialDelaySeconds: 10
            periodSeconds: 10
