applications/todo_frontend/todo_frontend_deployment.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: todo-frontend
#   namespace: todo
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: todo-frontend
#   template:
#     metadata:
#       labels:
#         app: todo-frontend
#     spec:
#       containers:
#       - name: todo-frontend
#         image: 21deepak/todo-frontend:dev
#         ports:
#         - containerPort: 80
#         resources:
#           requests:
#             memory: "128Mi"
#             cpu: "100m"
#           limits:
#             memory: "256Mi"

#             cpu: "500m"


apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
      - name: todo-frontend
        image: 21deepak/todo-frontend:dev
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
