applications/todo_frontend/todo_frontend_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  selector:
    app: todo-frontend
  ports:
  - port: 80
    targetPort: 80
